@@ -323,16 +323,16 @@ from issuing SCSI commands to an ATA device.
 from issuing ATA commands to a SCSI device.
 
 .\" %ENDIF NOT OS Darwin
-.\" %IF OS FreeBSD Linux
+.\" %IF OS FreeBSD Linux Windows Cygwin
 .I nvme[,NSID]
-\- [FreeBSD and Linux only] [NEW EXPERIMENTAL SMARTD FEATURE]
+\- [FreeBSD, Linux, Windows and Cygwin only] [NEW EXPERIMENTAL SMARTD FEATURE]
 the device type is NVM Express (NVMe).
 The optional parameter NSID specifies the namespace id (in hex) passed
 to the driver.
 Use 0xffffffff for the broadcast namespace id.
 The default for NSID is the namespace id addressed by the device name.
 
-.\" %ENDIF OS FreeBSD Linux
+.\" %ENDIF OS FreeBSD Linux Windows Cygwin
 .\" %IF NOT OS Darwin
 .I sat[,auto][,N]
 \- the device type is SCSI to ATA Translation (SAT).
@@ -586,13 +586,14 @@ failure is predicted in less than 24 hours, and a message at loglevel
 will be logged to syslog.  [Please see the
 .B smartctl \-H
 command-line option.]
-.\" %IF OS FreeBSD Linux
+.\" %IF OS FreeBSD Linux Windows Cygwin
 
-[NVMe] [FreeBSD and Linux only] [NEW EXPERIMENTAL SMARTD FEATURE]
+[NVMe] [FreeBSD, Linux, Windows and Cygwin only]
+[NEW EXPERIMENTAL SMARTD FEATURE]
 Checks the "Critical Warning" byte from the SMART/Health Information log.
 If any warning bit is set, a message at loglevel \fB\'LOG_CRIT\'\fP
 will be logged to syslog.
-.\" %ENDIF OS FreeBSD Linux
+.\" %ENDIF OS FreeBSD Linux Windows Cygwin
 .TP
 .B \-l TYPE
 Reports increases in the number of errors in one of three SMART logs.  The
@@ -602,13 +603,14 @@ valid arguments to this Directive are:
 \- [ATA] report if the number of ATA errors reported in the Summary SMART
 error log has increased since the last check.
 
-.\" %IF OS FreeBSD Linux
+.\" %IF OS FreeBSD Linux Windows Cygwin
 .I error
-\- [NVMe] [FreeBSD and Linux only] [NEW EXPERIMENTAL SMARTD FEATURE]
+\- [NVMe] [FreeBSD, Linux, Windows and Cygwin only]
+[NEW EXPERIMENTAL SMARTD FEATURE]
 report if the "Number of Error Information Log Entries" from the
 SMART/Health Information log has increased since the last check.
 
-.\" %ENDIF OS FreeBSD Linux
+.\" %ENDIF OS FreeBSD Linux Windows Cygwin
 .I xerror
 \- [ATA] report if the number of ATA errors reported in the Extended
 Comprehensive SMART error log has increased since the last check.
@@ -618,11 +620,12 @@ the maximum of both values.
 
 [Please see the \fBsmartctl \-l xerror\fP command-line option.]
 
-.\" %IF OS FreeBSD Linux
+.\" %IF OS FreeBSD Linux Windows Cygwin
 .I xerror
-\- [NVMe] [FreeBSD and Linux only] [NEW EXPERIMENTAL SMARTD FEATURE]
+\- [NVMe] [FreeBSD, Linux, Windows and Cygwin only]
+[NEW EXPERIMENTAL SMARTD FEATURE]
 same as \'-l error\'.
-.\" %ENDIF OS FreeBSD Linux
+.\" %ENDIF OS FreeBSD Linux Windows Cygwin
 
 .I selftest
 \- report if the number of failed tests reported in the SMART
@@ -1358,11 +1361,12 @@ To combine all of the above reports, use:
 For ATA devices, smartd interprets Attribute 194 or 190 as Temperature Celsius
 by default. This can be changed to Attribute 9 or 220 by the drive
 database or by the \'\-v 9,temp\' or \'\-v 220,temp\' directive.
-.\" %IF OS FreeBSD Linux
+.\" %IF OS FreeBSD Linux Windows Cygwin
 
+[NEW EXPERIMENTAL SMARTD FEATURE]
 For NVMe devices, smartd checks the maximum of the Composite Temperature value
 and all Temperature Sensor values reported by SMART/Health Information log.
-.\" %ENDIF OS FreeBSD Linux
+.\" %ENDIF OS FreeBSD Linux Windows Cygwin
 .TP
 .B \-F TYPE
 [ATA only] Modifies the behavior of \fBsmartd\fP to compensate for some
